# social_momentum_MPPI

./: .gitignore  README.md  bag_probe.py  bag_scanner.py  bag_to_parquet_converter_clean.py  batch_bag_to_parquet.py  batch_repair_metadata.py  launch_one_sim.sh  parquet.sh  rebuild_and_launch.sh  repair_bag_metadata.py  run_batch.sh  run_repair.sh  source.txt  tiago.sh
docs/: debug_session_commands.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sm_mppi_planner/share/sm_mppi_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sm_mppi_planner/share/sm_mppi_planner/launch/: 4_humans.launch.py  chat.launch.py  first_scenario_test.launch.py  gazebo_relay_node_all_simulations.launch.py  headon_demo.launch.py  joe_test.launch.py  scenario_1_gauntlet.launch.py  scenario_2_crossroads.launch.py  scenario_3_cluster.launch.py  scenario_4_emergency.launch.py  scenario_5_groups.launch.py  sm_mppi_simulation.launch.py  sm_paramtrized_version.launch.py  teleop_launch.launch.py  view_hallway.launch.py
install/sm_mppi_planner/share/sm_mppi_planner/models/Slampion/: Slampion.dae  model.sdf
install/sm_mppi_planner/share/sm_mppi_planner/models/hallway_world/: model.sdf
install/sm_mppi_planner/share/sm_mppi_planner/models/social_human/: Slampion.dae  model.sdf
install/sm_mppi_planner/share/sm_mppi_planner/models/social_wheelchair/: model.sdf
install/sm_mppi_planner/share/sm_mppi_planner/models/walking_human/: model.sdf
install/sm_mppi_planner/share/sm_mppi_planner/models/wall/: wall.dae
install/sm_mppi_planner/share/sm_mppi_planner/models/wheelchair/: model.sdf
install/sm_mppi_planner/share/sm_mppi_planner/rviz/: hallway_test.rviz  hallway_test2.rviz
install/sm_mppi_planner/share/sm_mppi_planner/worlds/: human_path.world
log/: latest_build
my_social_nav_interfaces/: CMakeLists.txt  package.xml
rosbags/post_processing/: analysis_dashboard.py
scripts/: capture_debug_data.sh
sm_mppi_planner/sm_mppi_planner/: mppi_planner_node.py  sm_mppi.py  utils.py
src/follower_plugin/: CMakeLists.txt
src/follower_plugin/src/: follower_plugin.cpp
src/my_social_nav_interfaces/: CMakeLists.txt
src/sm_mppi_planner/: package.xml  setup.cfg  setup.py
src/tiago_social_scenarios/: package.xml  setup.cfg  setup.py
src/tiago_social_scenarios/config/: nav2.yaml  nav2_fix.yaml  nav2_out_of_bounds.yaml  nav2_override.yaml
src/tiago_social_scenarios/launch/: my_world_nav.launch.py  scenario_1_gazebo_nav.launch.py  start_my_world.sh
src/tiago_social_scenarios/maps/hallway_map/: hallway_map.pgm  hallway_map.yaml
src/tiago_social_scenarios/models/social_human/: model.sdf
src/tiago_social_scenarios/tiago_social_scenarios/: gazebo_human_controller.py
(+91 files in other folders)
